--- a/movie.html
+++ b/movie.html
@@ -22,6 +22,24 @@
          </select>
      </div>
 
+     <ul class="showCase">
+         <li>
+             <div class="seat">
+                 <small>N/A</small>
+             </div>
+         </li>
+         <li>
+             <div class="seat selected">
+                 <small>Selected</small>
+             </div>
+         </li>
+         <li>
+             <div class="seat occupied">
+                 <small>Occupied</small>
+             </div>
+         </li>
+     </ul>
+
     <!-- JavaScript Here -->
     <script src="myScript.js"></script>
 </body>
