--- a/movie.html
+++ b/movie.html
@@ -24,22 +24,83 @@
 
      <ul class="showCase">
          <li>
-             <div class="seat">
-                 <small>N/A</small>
-             </div>
+             <div class="seat"></div>
+            <small>N/A</small>
          </li>
          <li>
-             <div class="seat selected">
+             <div class="seat selected"></div>
                  <small>Selected</small>
-             </div>
          </li>
          <li>
-             <div class="seat occupied">
-                 <small>Occupied</small>
-             </div>
+             <div class="seat occupied"></div>
+            <small>Occupied</small>
          </li>
      </ul>
 
+     <div class="container">
+         <div class="screen"></div>
+         <div class="row">
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+         </div>
+         <div class="row">
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+         </div>
+         <div class="row">
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+         </div>
+         <div class="row">
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+         </div>
+         <div class="row">
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat"></div>
+         </div>
+         <div class="row">
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+             <div class="seat occupied"></div>
+             <div class="seat occupied"></div>
+             <div class="seat"></div>
+             <div class="seat"></div>
+         </div>
+     </div>
+     <p class="text">You have selected <span id="count">0</span> seats for a price of Tk. <span id="total">0</span></p>
     <!-- JavaScript Here -->
     <script src="myScript.js"></script>
 </body>
