css file editing

--- a/movie.html
+++ b/movie.html
@@ -101,7 +101,12 @@
          </div>
      </div>
      <p class="text">You have selected <span id="count">0</span> seats for a price of Tk. <span id="total">0</span></p>
-    <!-- JavaScript Here -->
+    
+    <footer>
+        <h5>&copy; Injamul Alam | All rights reserved</h5>
+    </footer>
+    
+     <!-- JavaScript Here -->
     <script src="myScript.js"></script>
 </body>
 </html>
