--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
      <div class="movieContainer">
          <label>Pick a movie</label>
          <select id="movie">
-             <option value="250">SPYDER (Tk. 250)</option>
-             <option value="350">Ratsasan (Tk. 350)</option>
-             <option value="550">PUSHPA (Tk. 550)</option>
-             <option value="650">KGF-Chapter 2 (Tk. 650)</option>
+             <option value="250">SPYDER (৳. 250)</option>
+             <option value="350">Ratsasan (৳. 350)</option>
+             <option value="550">PUSHPA (৳. 550)</option>
+             <option value="650">KGF-Chapter 2 (৳. 650)</option>
          </select>
      </div>
 
@@ -100,10 +100,10 @@
              <div class="seat"></div>
          </div>
      </div>
-     <p class="text">You have selected <span id="count">0</span> seats for a price of Tk. <span id="total">0</span></p>
+     <p class="text">You have selected <span id="count">0</span> seats for a price of Tk. <span id="total">0</span>৳</p>
     
     <footer>
-        <h5>&copy; Injamul Alam | All rights reserved</h5>
+        <h5>&copy; 2021 - Injamul Alam | All rights reserved</h5>
     </footer>
     
      <!-- JavaScript Here -->
