--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
      <div class="movieContainer">
-         <label for="movie">Pick a movie</label>
+         <label>Pick a movie</label>
          <select id="movie">
              <option value="250">SPYDER (৳. 250)</option>
              <option value="350">Ratsasan (৳. 350)</option>
